--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                       <div class="col-lg-6">
                         <ul>
                           <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>4 Jan 1997</span></li>
-                          <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                          <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>gautam625.github.io/Portfolio</span></li>
                           <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9004420925</span></li>
                           <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ranchi</span></li>
                         </ul>
